testdata/fixtures/audit/negative/exec_user_input_neg_subprocess_no_shell_py.py
import subprocess


def run_command(cmd):
    subprocess.call(cmd)
